[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Modules/Core/DebugOverlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/kenney_pixel_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/kenney_mini_16.tres" type="DynamicFont" id=3]

[node name="DebugOverlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 338.0
margin_bottom = 404.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.0784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bg"]
modulate = Color( 0.219608, 0.85098, 0.45098, 0.392157 )
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 18.0
margin_right = 299.0
margin_bottom = -19.0
custom_fonts/font = ExtResource( 2 )
text = "text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVersion" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -23.9999
margin_right = 56.0
margin_bottom = -9.99994
custom_fonts/font = ExtResource( 3 )
text = "10.10.10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
